# luminous

./: .gitattributes  .gitignore  CONTENT_LICENSE  LICENSE  README.md  justfile
.github/workflows/: pages.yml
docs/: _main.typ  _template.typ  justfile  luminous.typ
docs/governance/: constitution.typ  containment-doctrine.typ  external-relations.typ  index.typ  migration-policy.typ
docs/governance/agencies/: military.typ  outreach.typ
docs/government/agencies/: military.typ  outreach.typ
docs/history/: anomalies.typ  discovery.typ  first-contact.typ  index.typ  sit-in-it.typ  stabilisation.typ  withdrawal.typ
docs/luminous/: arden.typ  emergence.typ  haven.typ  index.typ  kera.typ  lowtide.typ  solace.typ  vale.typ
docs/luminous-ring/: index.typ
docs/people/: founders.typ  randall-paints.typ  ronan.typ  scarlett.typ
docs/places/: earth.typ  emergence.typ  haven-spaceport.typ  haven-university.typ  haven.typ
docs/society/: culture.typ  economy.typ  education.typ  housing.typ  index.typ  work-and-contribution.typ
docs/technology/: computation.typ  feink.typ  index.typ  interstellar-transit.typ  particle-emitter.typ  quantum-computation.typ  synthetic-humans.typ
game/: icon.svg.import  project.godot
game/scenes/: world.tscn
site/: .prettierrc.js  astro.config.ts  justfile  package.json  tsconfig.json
site/patches/: astro@6.4.8.patch
site/src/: content.config.ts
site/typst-wasm/: Cargo.toml  justfile  package.json
site/typst-wasm/src/: lib.rs
wiki/: astro.config.ts  package.json
wiki/plugins/: typst.ts
wiki/typst-wasm/: Cargo.toml
(+38 files in other folders)
